--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+<link rel="stylesheet" href="style.css" />
+<title>My Personal Website</title>
     </head>
-        <title>My Personal Website</title>
     <body>
         <h1>Hello World!</h1>
     </body>
