Added headers, paragraphs, lists, and information

--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
 <title>My Website</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Austin Vichich</h1>
         <script src="script.js"></script>
+            <h3>About Me</h3>
+                <p>I'm currnetly learning software development part time as I also work as a Merchandise Coordinator in the Ski Industry.<p>
+                <p>I really enjoy learning new things and am currently honing my skills in JavaScript, HTML, CSS, ReactJS, Python, SQL, and Flask. I'm excited to be able to implement these new skills in a professional environment.</p>
+                <p>My previous experience comes from the retail world and am excited to apply myself in new industries through technology.</p>
+                <p>I think it's important to keep progressing, always be curious, and testing your limits.</p>
+                
+            <h3>Info</h3>
+                <ul>
+                    <li>
+                        Associates Degree from University of Delaware
+                    </li>
+                    <li>
+                        Bachelors Degree in Economics from Metro State University of Denver
+                    </li>
+                    <li>
+                        Merchandise Coordinator and Alterra Mountain Company
+                    </li>
+                </ul>
     </body>
 
 </html>
