--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
     <head>
 <link rel="stylesheet" href="style.css" />
+<ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="info.html">Info</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+
 <title>My Website</title>
     </head>
     <body>
@@ -13,18 +19,6 @@
                 <p>My previous experience comes from the retail world and am excited to apply myself in new industries through technology.</p>
                 <p>I think it's important to keep progressing, always be curious, and testing your limits.</p>
                 
-            <h3>Info</h3>
-                <ul>
-                    <li>
-                        Associates Degree from University of Delaware
-                    </li>
-                    <li>
-                        Bachelors Degree in Economics from Metro State University of Denver
-                    </li>
-                    <li>
-                        Merchandise Coordinator and Alterra Mountain Company
-                    </li>
-                </ul>
     </body>
 
 </html>
