--- a/contact.html
+++ b/contact.html
@@ -12,5 +12,8 @@
     </head>
         <body>
             <h1>Contact</h1>
+            <p>
+                Email: Avichich4@gmail.com
+            </p>
         </body>
     </head>
